# Projects

./: .gitignore  ARCHITECTURE_LOCK_v1.md  INSTALL.bat  PROJECT_SETUP.md  README.md  electron-builder.yml  eslint.config.mjs  launch.bat  package-lock.json  package.json  setup-and-build.bat  warm_memory.db
.github/: copilot-instructions.md
07-NeuroSeed/: .gitignore  NeuroSeed_Dossier.md  README.md  project_metadata.json  setup.bat  source-conversation.txt
ai-cyber-shield/: .gitignore  README.md  package-lock.json  package.json  project_metadata.json  requirements.txt  setup.bat
app/: layout.tsx  page.tsx
dews/: .gitignore  README.md  package-lock.json  package.json  project_metadata.json  setup.bat
docs/: architecture.md
electron/: index.html  main.js  preload.js  renderer.js  styles.css
kairo/: README.md  project_metadata.json
kattappa/: .env.example  .gitignore  AI_FOUNDATIONS.md  ARCHITECTURE_LOCK_v1.md  README.md  analyze_checkpoint_timing.py  baseline_lock_v1.json  build_pipeline.bat  dataset_engine.md  main.py  project_metadata.json  pyrefly.toml  pytest.ini  requirements.txt  run_eval.py  run_inference.py  setup.bat  setup.command  setup.sh  task.md  train_lora.py
mira/: README.md  project_metadata.json
musical-keyboard/: .gitignore  README.md  index.html  package-lock.json  package.json  project_metadata.json  setup.bat  vite.config.ts
pcb-doctor/: .gitignore  README.md  package-lock.json  package.json  setup.bat  (+1 more)
universal-ai/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
universal-ai/apps/desktop/src-tauri/src/: lib.rs  main.rs
(+1743 files in other folders)
