[package]
name = "sekhar-ai-os-desktop"
version = "10.0.0"
description = "Sekhar AI OS desktop shell"
authors = ["Sekhar"]
edition = "2021"

[lib]
name = "sekhar_ai_os_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
